@@ -1,8 +1,8 @@
 Package: pacman
 Type: Package
 Title: Package Management Tool
-Version: 0.4.3
-Date: 2016-03-30
+Version: 0.4.4
+Date: 2016-09-06
 Authors@R: c(person("Tyler", "Rinker", role = c("aut", "cre", "ctb"),
         email = "tyler.rinker@gmail.com"), person("Dason",
         "Kurkiewicz", role = c("aut", "ctb"), email =
