@@ -7,6 +7,8 @@
 #' address(es) in the format \code{username/repo[/subdir][@@ref|#pull]}.  
 #' @param version Corresponding \code{character} vector of the minimal 
 #' package version(s).
+#' @param dependencies logical.  If \code{TRUE} necessary dependencies will be 
+#' installed as well.
 #' @keywords version
 #' @export
 #' @examples
@@ -14,7 +16,7 @@
 #'     c("trinker/pacman", "hadley/testthat"), 
 #'     c("0.2.0", "0.9.1")
 #' )
-p_install_version_gh <- function (package, version){ 
+p_install_version_gh <- function (package, version, dependencies = TRUE){ 
 
     ## Check that package and version are equal in length
     if (length(package) != length(version)) {
@@ -22,7 +24,7 @@ p_install_version_gh <- function (package, version){
     }
 
     # Version check on each of the packages
-    status <- Map(p_install_version_single_gh, package, version)
+    status <- Map(p_install_version_single_gh, package, version, dependencies = dependencies)
     return(invisible(status))
     
 }
